# Xceptionally-Cyclic

./: .gitignore  final_model.pt  pyproject.toml  requirements.txt
dataset/: dataset.py  datasetV2.py
model/: xception.py
models/: xception.py  xception_confidence_map.py
pytorchexample/: __init__.py  client_app.py  custom_strategy.py  server_app.py  task.py
pytorchexample/dataset/: dataset.py
pytorchexample/models/: xception.py  xception_confidence_map.py
pytorchexample/tests/: test_dataset.py
