[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "quickstart-pytorch"
version = "1.0.2"
description = "Federated Learning with PyTorch and Flower (Quickstart Example)"
license = "Apache-2.0"
dependencies = [
    "flwr[simulation]==1.29.0",
    "flwr-datasets[vision]>=0.6.0",
    "torch==2.11.0", 
    "torchvision==0.26.0",
    "albumentations>=2.0.8",    
    "scikit-learn==1.8.0",
    "matplotlib>=3.8.0"
]

# [tool.flwr.federations]
# default = "local"

# [tool.flwr.federations.local]
# address = ":local:"
# options.num-supernodes = 6

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.flwr.app]
publisher = "flwrlabs"

[tool.flwr.app.components]
serverapp = "pytorchexample.server_app:app"
clientapp = "pytorchexample.client_app:app"

[tool.flwr.app.config]
experiment = "fedavg"   #Write
num-server-rounds = 3
fraction-evaluate = 0
local-epochs = 1
learning-rate = 0.01
batch-size = 2
num-clients = 1
