[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "quickstart-pytorch"
version = "1.1.1"
description = "Federated Learning with PyTorch and Flower (Quickstart Example)"
license = { file = "LICENSE" }
dependencies = [
    "flwr[simulation]>=1.28.0",
    "flwr-datasets[vision]>=0.6.0",
    "torch==2.8.0",
    "torchvision==0.23.0",
    "albumentations>=1.3.0",    
    "scikit-learn>=1.8.0",
    "matplotlib>=3.8.0",
]

[tool.hatch.build.targets.wheel]
packages = ["pytorchexample"]

[tool.flwr.app]
publisher = "flwrlabs"
fab-format-version = 1
flwr-version-target = "1.29.0"

[tool.flwr.app.components]
serverapp = "pytorchexample.server_app:app"
clientapp = "pytorchexample.client_app:app"

[tool.flwr.app.config]
experiment = "fedavg"   #Write
num-server-rounds = 3
fraction-evaluate = 1
local-epochs = 1
learning-rate = 0.1
batch-size = 16
num-partitions = 6
